check input, upload image, convert to binary string

--- a/views/home.pug
+++ b/views/home.pug
@@ -6,14 +6,14 @@ html
         br
         form(action = "/", method = "POST" enctype="multipart/form-data")
             div
-                label(for = "stringHide") Chuoi ma hoa:
+                label(for = "stringEncrypt") Chuoi ma hoa:
                 br
-                input(name = "stringHide" type="text" value = stringFile)
+                input(name = "stringEncrypt" type="text" value = stringFile)
             br
             div
-                label(for = "fileEncode") File:
+                label(for = "fileEncrypt") File:
                 br
-                input(name = "fileEncode" type="file" value = file)
+                input(name = "fileEncrypt" type="file" value = file)
             br
             button(type = "submit") Ma hoa
         
